1 file modified, 1 added, 1 deleted

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,25 +3,34 @@
 <head>
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
 <style>
-.parallax { 
-  background-image: url("img_parallax.jpg");
-  height: 500px; 
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
+  .parallax { 
+    background-color:#F135;
+    height: 500px; 
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin: auto 0;
+  }
+  i{
+    padding-right: 30px;
+    padding-top: 30px;
+    margin: 0 auto;
+    padding-left: 30px;
+    color: #F247;
+    margin: 30px;
+  }
 </style>
 </head>
 <body>
 
-<div class="parallax"></div>
-
-<i class="fas fa-band-aid"></i>
-<i class="fas fa-cat"></i>
-<i class="fas fa-dragon"></i>
-<i class="far fa-clock"></i>
-<i class="fas fa-clock"></i>
+<div class="parallax">
+  <i class="fas fa-band-aid"></i>
+  <i class="fas fa-cat"></i>
+  <i class="fas fa-dragon"></i>
+  <i class="far fa-clock"></i>
+  <i class="fas fa-user"></i>
+</div>
 
 </body>
 </html>
