--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
 <style>
   .parallax { 
-    background-color:#F135;
+    background-color:#E854;
     height: 500px; 
     background-attachment: fixed;
     background-position: center;
@@ -19,6 +19,7 @@
     padding-left: 30px;
     color: #F247;
     margin: 30px;
+
   }
 </style>
 </head>
