1 file modified (icons changed)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,12 +13,11 @@
     margin: auto 0;
   }
   i{
-    padding-right: 30px;
-    padding-top: 30px;
     margin: 0 auto;
     padding-left: 30px;
     color: #F247;
     margin: 30px;
+    font-size: 30px;
 
   }
 </style>
@@ -31,6 +30,7 @@
   <i class="fas fa-dragon"></i>
   <i class="far fa-clock"></i>
   <i class="fas fa-user"></i>
+  <i class="fas fa-blender-phone"></i>
 </div>
 
 </body>
